# krakyn_desktop

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  app.go  go.mod  go.sum  main.go  network.go  wails.json
frontend/: index.html  package-lock.json  package.json.md5
frontend/src/: content.js  forms.js  main.js  style.css
frontend/wailsjs/go/main/: App.d.ts  App.js
src/: application.cc  application.hh  main.cc  main_window.cc
